<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChooseYourAdventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_start">Start your adventure!</string>
    <string name="butto_text_start">Start travelling</string>
    <string name="title_activity_room_alley">Alley</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_alley">You have ventured down a dark alley, where would you like to go next..</string>
    <string name="button_go_left">Go left</string>
    <string name="button_continue">Continue</string>
    <string name="button_go_right">Go right</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_final">Final</string>
    <string name="text_room">You have entered a room with two doors..</string>
    <string name="button_text_door1">Enter door 1</string>
    <string name="button_text_door2">Enter door 2</string>
    <string name="text_view_final_winner">You\'ve reached the gold %s</string>
    <string name="text_view_final_looser">You\'ve fallen into the pit of despair %s</string>
    <string name="pref_difficulty">Difficulty</string>
    <string name="pref_difficulty_summary">Select the difficulty level</string>
    <string name="pref_player_name_title">Player\'s name</string>
    <string name="pref_player_name_summary">Enter your name fighter!</string>
    <string name="pref_category">Preferences</string>
    <string name="action_bar_title">ChooseYourAdventure</string>

</resources>
